--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -4,16 +4,16 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:2.1-stretch AS build
 WORKDIR /src
-COPY ["Demo.csproj", ""]
-RUN dotnet restore "./Demo.csproj"
+COPY ["API.csproj", ""]
+RUN dotnet restore "./API.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "Demo.csproj" -c Release -o /app
+RUN dotnet build "API.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Demo.csproj" -c Release -o /app
+RUN dotnet publish "API.csproj" -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "Demo.dll"]
+ENTRYPOINT ["dotnet", "API.dll"]
