Add log4net to API APIv2 API3v3 and some logs to track activity

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,24 @@
 /UI/bin/Debug/netcoreapp2.1/UI.deps.json
 /UI/bin/Debug/netcoreapp2.1/UI.runtimeconfig.dev.json
 /UI/bin/Debug/netcoreapp2.1/UI.runtimeconfig.json
+/.vs/Demo/DesignTimeBuild/.dtbcache.v2
+/Commons/bin/Debug/netstandard2.0/Commons.deps.json
+/Commons/bin/Debug/netstandard2.0/Commons.dll
+/Commons/bin/Debug/netstandard2.0/Commons.pdb
+/Commons/obj/Debug/netstandard2.0/Commons.AssemblyInfo.cs
+/Commons/obj/Debug/netstandard2.0/Commons.AssemblyInfoInputs.cache
+/Commons/obj/Debug/netstandard2.0/Commons.assets.cache
+/Commons/obj/Debug/netstandard2.0/Commons.csproj.CoreCompileInputs.cache
+/Commons/obj/Debug/netstandard2.0/Commons.csproj.FileListAbsolute.txt
+/Commons/obj/Debug/netstandard2.0/Commons.csprojAssemblyReference.cache
+/Commons/obj/Debug/netstandard2.0/Commons.dll
+/Commons/obj/Debug/netstandard2.0/Commons.pdb
+/.vs
+/API/obj/Debug
+/APIv2/bin
+/APIv2/obj/Debug
+/APIv3/obj/Debug
+/UI/obj/Debug
+/API/bin/Debug/netcoreapp2.1/log4net.config.xml
+/APIv3/bin/Debug/netcoreapp2.1/log4net.config.xml
+/UI/bin/Debug/netcoreapp2.1/log4net.config.xml
