--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,31 @@
 /API/bin/Debug/netcoreapp2.1/log4net.config.xml
 /APIv3/bin/Debug/netcoreapp2.1/log4net.config.xml
 /UI/bin/Debug/netcoreapp2.1/log4net.config.xml
+/API/obj/Container/AbsoluteOutputAssemblyPath.cache
+/API/obj/Container/AdditionalProbingPaths.cache
+/API/obj/Container/ContainerDevelopmentMode.cache
+/API/obj/Container/ContainerId.cache
+/API/obj/Container/ContainerName.cache
+/API/obj/Container/ContainerOperatingSystemFlavor.cache
+/API/obj/Container/ContainerRunContext.cache
+/API/obj/Container/DebuggeeArguments.cache
+/API/obj/Container/DebuggeeKillProcessCommand.cache
+/API/obj/Container/DebuggeeProgram.cache
+/API/obj/Container/DebuggeeWorkingDirectory.cache
+/API/obj/Container/FastModeProjectMountDirectory.cache
+/API/obj/Container/ImageBuildContext.cache
+/API/obj/Container/ImageId.cache
+/API/obj/Container/OperatingSystemName.cache
+/API/obj/Container/TargetFramework.cache
+/API/obj/Container/VsDbgScript.cache
+/APIv2/obj/Container/ContainerDevelopmentMode.cache
+/APIv2/obj/Container/ContainerId.cache
+/APIv2/obj/Container/ContainerName.cache
+/APIv2/obj/Container/ContainerRunContext.cache
+/APIv3/obj/Container/ContainerDevelopmentMode.cache
+/APIv3/obj/Container/ContainerId.cache
+/APIv3/obj/Container/ContainerName.cache
+/APIv3/obj/Container/ContainerRunContext.cache
+/UI/obj/Container/ContainerDevelopmentMode.cache
+/UI/obj/Container/ContainerId.cache
+/UI/obj/Container/ContainerRunContext.cache
